Made some changes locally

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,8 @@
         <br>
         <div class="center text-big bold">
             Hi! This is vimala, its my first webapp.
+			<h4>This is new heading</h4>
+			Introduction to Modern App Development.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
