--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <title> Vimala's Website </title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 
 <body>
