--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,7 +6,7 @@
         .content{
             max-width:1000px;
             border: 1px solid #FFF;
-            margin 10px;
+            margin 0 auto;
             padding: 5px 10px;
             font-family:sans-sarif;
         }
