--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -2,17 +2,7 @@
 <head>
     <title> Vimala's Website </title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style>
-        .content{
-            max-width:1000px;
-            border: 1px solid #FFF;
-            margin 0 auto;
-            padding: 60px 80px;
-            font-family:sans-sarif;
-        }
-        
-        
-    </style>
+    <link href="/ui/style.css" rel="stylesheet" />
 </head>
 
 <body>
