--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -18,7 +18,7 @@
         Feb 10,2017
     </div>
     
-    <div class='content'>
+    <div class='container'>
         
       <div>
            <p>Im just learning how to make websites. Its going to be fabulous.Im just learning how to make websites. Its going to be fabulous.Im just learning how to make websites. Its going to be fabulous.
