[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -13,6 +13,9 @@
 			<h4>This is new heading</h4>
 			Introduction to Modern App Development.
         </div>
+        <script>
+          alert('Hi, Im javaScript');
+         </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
