--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div id ='main-text' class="center text-big bold">
+        <div id ="main-text" class="center text-big bold">
             Hi! This is vimala, its my first webapp.
 			<h4>This is new heading</h4>
 			Introduction to Modern App Development.
