--- a/ui/index.html
+++ b/ui/index.html
@@ -4,18 +4,25 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img id = "madi" src="/ui/madi.png" class="img-medium"/>
+        <div class = 'container' >
+                    <div class="center">
+                        <img id = "madi" src="https://pbs.twimg.com/profile_images/820520042815164416/eLLqPIrC.jpg" class="img-medium"/>
+                    </div>
+                    <hr />
+                    <br>
+                    <h3>Personal</h3>
+                    <div>
+                        Hi.. This is Vimala...
+                    </div>
+                    <hr />
+                    <h3>Professional</h3>
+                    <div>
+                       Im currently pursuing course.
+                    </div>
+                    <hr />
+                    <div class = "footer">
+                    </div>
         </div>
-        <br>
-        <div id ="main-text" class="center text-big bold">
-            Hi! This is vimala, its my first webapp.
-			<h4>This is new heading</h4>
-			Introduction to Modern App Development.
-        </div>
-        <script>
-          alert('Hi, Im javaScript');
-         </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
