[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -24,9 +24,9 @@
                         This button <button id ='counter'>Click me!</button> has been clicked <span id = 'count'>0</span> times
                     </div>
                     <hr />
-                    <input type = "text" id = "name" placeholder = "name"> </input>
-                    <input type ="submit" value = "Submit" id = "submit_btn"> </input>
-                    <ul id = "namelist">
+                    <input type = "text" id = "name" placeholder = 'name'> </input>
+                    <input type ="submit" value = 'Submit' id = 'submit_btn'> </input>
+                    <ul id = 'namelist'>
                     </ul>
         </div>
         <script type="text/javascript" src="/ui/main.js">
